--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,28 @@
-fastapi
-uvicorn[standard]
-httpx
-python-dotenv
+fastapi==0.95.2
+starlette==0.27.0
+uvicorn[standard]==0.22.0
+python-jose==3.3.0
+passlib[bcrypt]==1.7.4
+python-dotenv==1.0.0
+httpx==0.24.1
+
+# Added for ICT detectors/data loader
+pandas==2.1.2
+numpy==1.25.2
+python-multipart==0.0.9
+
+# Astro / generator
+pyswisseph==2.10.3.1
+plotly==5.22.0
+
+# Testing
+pytest==7.4.0
+
+# ML/AI for Meta-Aggregator
+lightgbm==4.3.0
+shap==0.44.1
+
+# News module dependencies
+sqlalchemy[asyncio]==2.0.23
+asyncpg==0.29.0
+psycopg2-binary==2.9.9
